<resources>
    <string name="app_name">LMS_Course_App</string>
    <string name="label_hello_world">Hello World</string>
    <string name="action_hello">Hello User</string>
    <string name="better_tracker_text">Arguably the best fitness tracker at FEFU</string>
    <string name="better_tracker_text_under_label">Created by students</string>
    <string name="sign_up">Sign up</string>
    <string name="registration">Registration</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="first_name_or_nickname">First name or nickname</string>">
    <string name="password">Password</string>">
    <string name="repeat_password">Repeat password</string>">
    <string name="login">Login</string>">
    <string name="gender">Gender</string>">
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="T90">T-90M "Breakthrough"</string>
    <string name="other">Other</string>
    <string name="privacy_policy">By clicking the button, you agree to the Privacy Policy and personal data processing, and Terms of Service</string>
    <string name="privacy_policy_key">Privacy Policy</string>
    <string name="terms_of_service_key">Terms of Service</string>
    <string name="my_activities">My</string>
    <string name="users_activities">Users</string>
    <string name="activity_title">Activity</string>
    <string name="profile_title">Profile</string>
    <string name="play">play</string>
    <string name="time_to_train">Time to train</string>
    <string name="start_to_train">Tap the button below and start training</string>
    <string name="distance_km">%1$s km</string>
    <string name="duration_min">%1$s min</string>
    <string name="created_by">Created: %1$s</string>
    <string name="exit">Exit</string>
    <string name="change_password">Change password</string>
    <string name="save_text_button">Save</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="start">Start: %1$s</string>
    <string name="finish">Finish: %1$s</string>
    <string name="_0_hours">0 hours</string>
    <string name="activity_name">Activity name</string>
    <string name="back">Back</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="_10">10 км</string>
    <string name="_1_42">1ч 42мин</string>
    <string name="vertical_divider">|</string>
    <string name="enter_comment">Comment</string>
    <string name="_60_min">60 мин</string>
    <string name="activity_run">Бег</string>
    <string name="time_today">Сегодня</string>
    <string name="_10_km">10 км</string>
</resources>