<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <ImageView
        android:id="@+id/buttonBackToWelcome"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_margin="16dp"
        android:src="@drawable/back_arrow_svg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Поле ввода "Логин" -->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/registrationTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registration"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="?android:textColorPrimary"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="@id/buttonBackToWelcome"
        app:layout_constraintBottom_toBottomOf="@id/buttonBackToWelcome"
        app:layout_constraintStart_toEndOf="@id/buttonBackToWelcome"

        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLogin"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:layout_marginTop="16dp"
        app:placeholderText="@string/login"
        android:hint="@string/login"

        app:layout_constraintTop_toBottomOf="@id/registrationTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputLogin_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Поле ввода "Имя или Никнейм" -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:paddingTop="16dp"
        app:placeholderText="@string/first_name_or_nickname"
        android:hint="@string/first_name_or_nickname"

        app:layout_constraintTop_toBottomOf="@id/inputLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputName_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Поле ввода "Пароль" -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:paddingTop="16dp"
        app:placeholderText="@string/password"
        android:hint="@string/password"

        app:layout_constraintTop_toBottomOf="@id/inputName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputPassword_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:drawableEnd="@drawable/eye_show_svg"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Поле ввода "Повторите пароль" -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputRepeatPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:paddingTop="16dp"
        app:placeholderText="@string/repeat_password"
        android:hint="@string/repeat_password"

        app:layout_constraintTop_toBottomOf="@id/inputPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputRepeatPassword_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:drawableEnd="@drawable/eye_show_svg"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- RadioGroup с RadioButton -->
    <TextView
        android:id="@+id/genderLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/gender"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputRepeatPassword" />

    <RadioGroup
        android:id="@+id/radioGroupGender"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/genderLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"

        app:layout_constraintWidth_percent="0.9">
<!--        android:buttonTint="@drawable/radio_button_state"-->
        <RadioButton
            android:id="@+id/radioMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:buttonTint="@drawable/radio_button_selector"
            />

        <RadioButton
            android:id="@+id/radioFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:buttonTint="@drawable/radio_button_selector"
            />

        <RadioButton
            android:id="@+id/radioT90"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/T90"
            android:buttonTint="@drawable/radio_button_selector"
            />

        <RadioButton
            android:id="@+id/radioOther"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/other"
            android:buttonTint="@drawable/radio_button_selector"
            />
    </RadioGroup>

    <!-- Кнопка регистрации -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="54dp"
        android:minWidth="379dp"
        android:text="@string/sign_up"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/radioGroupGender"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.9" />

    <!-- Подпись с политикой конфиденциальности -->
    <TextView
        android:id="@+id/privacyPolicyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/privacy_policy"
        android:textSize="14sp"
        android:textAlignment="center"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:focusable="true"
        android:linksClickable="true"
        android:padding="16dp"

        app:layout_constraintTop_toBottomOf="@id/buttonRegister"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>