<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ProfileFragment">

    <!-- Поле ввода "Логин" -->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/profileTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/profile_title"
        android:textColor="?android:textColorPrimary"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/profileSaveTextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:focusable="true"
        android:paddingTop="8dp"
        android:text="@string/save_text_button"
        android:textColor="?attr/colorPrimary"
        android:textSize="16sp"
        android:textStyle="bold"

        android:foreground="?attr/selectableItemBackground"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.915"
        app:layout_constraintStart_toEndOf="@+id/profileTitle"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/profileInputLogin"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:layout_marginTop="16dp"
        app:placeholderText="@string/login"
        android:hint="@string/login"

        app:layout_constraintTop_toBottomOf="@id/profileTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/profileInputLogin_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Поле ввода "Имя или Никнейм" -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/profileInputName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:paddingTop="16dp"
        app:placeholderText="@string/first_name_or_nickname"
        android:hint="@string/first_name_or_nickname"

        app:layout_constraintTop_toBottomOf="@id/profileInputLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/profileInputName_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Кнопка регистрации -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonLogout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:minWidth="379dp"
        android:minHeight="54dp"
        android:text="@string/exit"
        app:backgroundTint="@color/red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profileInputName"
        app:layout_constraintVertical_bias="0.956"
        app:layout_constraintWidth_percent="0.9" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/profileChangePasswordButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:focusable="true"
        android:paddingTop="8dp"
        android:textSize="16sp"
        android:text="@string/change_password"
        android:textColor="?attr/colorPrimary"
        android:textStyle="bold"

        android:foreground="?attr/selectableItemBackground"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.129"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profileInputName" />


</androidx.constraintlayout.widget.ConstraintLayout>
