<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <ImageView
        android:id="@+id/buttonBackToWelcome"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_margin="16dp"
        android:src="@drawable/back_arrow_svg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Поле ввода "Логин" -->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/loginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registration"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="?android:textColorPrimary"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="@id/buttonBackToWelcome"
        app:layout_constraintBottom_toBottomOf="@id/buttonBackToWelcome"
        app:layout_constraintStart_toEndOf="@id/buttonBackToWelcome"

        />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/better_tracker_text"
        android:layout_marginTop="30dp"
        android:scaleType="centerCrop"
        android:src="@drawable/welcome_screen_image"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginTitle" />

    <!-- Поле ввода "Имя или Никнейм" -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLogin"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:paddingTop="16dp"
        app:placeholderText="Placeholder Text"
        android:hint="@string/login"

        app:layout_constraintTop_toBottomOf="@id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputLogin_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Поле ввода "Повторите пароль" -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:paddingTop="16dp"
        app:placeholderText="Placeholder Text"
        android:hint="@string/password"

        app:layout_constraintTop_toBottomOf="@id/inputLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputPassword_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:drawableEnd="@drawable/eye_show_svg"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Кнопка регистрации -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="54dp"
        android:minWidth="379dp"
        android:text="@string/login"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/inputPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.9" />

</androidx.constraintlayout.widget.ConstraintLayout>